# workday

./: .gitignore  CLAUDE.md  LICENSE  README.md  WEB_INTEGRATION.md  analysis.py  api.py  config_manager.py  convert_video.py  database.py  llm_call.py  logger.py  main.py  models.py  prompts.py  pyproject.toml  recorder.py
docs/: 01-overview.md  02-quickstart.md  03-model-config.md  04-recognition-mode.md  05-analysis-pipeline.md  06-categories.md  07-token-usage.md  08-data-storage.md  09-cli.md  video_conversion_guide.md
src/workday/: __main__.py  cli.py
src/workday/core/: config.py  database.py  logger.py  models.py
src/workday/gui/: app.py
src/workday/gui/views/: about.py  analysis.py  dashboard.py  developer.py  guide.py  settings.py  timeline.py
src/workday/gui/widgets/: activity_card.py  calendar_picker.py  date_nav.py  recording_controls.py
src/workday/services/: analysis.py  analysis_report.py  llm_call.py  prompts.py  recorder.py
src/workday/utils/: __init__.py  convert_video.py  docs_loader.py  markdown_parser.py
web/: .env.example  BUILD.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/guide/: page.tsx
web/src/app/settings/: page.tsx
web/src/components/: ActivityDetail.tsx  Header.tsx  Sidebar.tsx  TimelineList.tsx
web/src/lib/: api.ts  utils.ts
web/src/types/: index.ts
