[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workday"
version = "0.2.0"
description = "AI 驱动的工作时间追踪工具 - 自动记录屏幕活动并使用 AI 生成时间线"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "langchain-openai>=0.3.0",
    "platformdirs>=4.0.0",
    "mss>=9.0.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "customtkinter>=5.2.0",
    "tkcalendar>=1.6.1",
]

[project.scripts]
workday = "workday.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/workday"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]


[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple"
default = true
