[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workday-py"
version = "0.1.0b1"
description = "AI-powered work time tracker - auto records screen and generates activity timeline"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "liuping", email = "" },
]
keywords = ["productivity", "time-tracking", "screen-recorder", "ai", "llm", "timeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Desktop Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/8DE4732A/workday"
Repository = "https://github.com/8DE4732A/workday"
"Bug Tracker" = "https://github.com/8DE4732A/workday/issues"
dependencies = [
    "openai>=1.0.0",
    "langchain-openai>=0.3.0",
    "platformdirs>=4.0.0",
    "mss>=9.0.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "customtkinter>=5.2.0",
    "tkcalendar>=1.6.1",
    "pyobjc-framework-cocoa>=12.1 ; sys_platform == 'darwin'",
]

[project.scripts]
workday = "workday.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/workday"]

[tool.hatch.build.targets.wheel.force-include]
"docs" = "workday/docs"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]


[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple"
default = true
